deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: platform-app
  namespace: platform-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: platform-app
  template:
    metadata:
      labels:
        app: platform-app
    spec:
      containers:
        - name: app
          image: ghcr.io/himanshu2561/platform-app:7c293853b841081f9547dc7e6aa91e59ff462477
          imagePullPolicy: Always
          ports:
            - containerPort: 8000

          resources:
            requests:
              memory: "128Mi"
              cpu: "100m"
            limits:
              memory: "256Mi"
              cpu: "500m"

          readinessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 5
            periodSeconds: 10

          livenessProbe:
            httpGet:
              path: /health
              port: 8000
            initialDelaySeconds: 15
            periodSeconds: 20

          securityContext:
            allowPrivilegeEscalation: false
            runAsNonRoot: true
            runAsUser: 1000
