service.yaml
apiVersion: v1
kind: Service
metadata:
  name: platform-app
  namespace: platform-app
spec:
  selector:
    app: platform-app
  ports:
    - port: 80
      targetPort: 8000
