ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: platform-app
  namespace: platform-app
spec:
  ingressClassName: nginx
  rules:
    - host: platform-app.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: platform-app
                port:
                  number: 80
